# qtjmix

./: CMakeLists.txt  README.md  TODO
doc/: qtjmix_doc.html  qtjmix_doc.odt
src/: CMakeLists.txt  gui_mixer.cpp  gui_mixer.h  help_dialog.cpp  help_dialog.h  main.cpp  mixer_strip.cpp  mixer_strip.h  qtjmix.qrc  set_mixer_param_dialog.cpp  set_mixer_param_dialog.h
src/awl/: CMakeLists.txt  aslider.cpp  aslider.h  awlplugin.cpp  awlplugin.h  checkbox.cpp  checkbox.h  colorlabel.cpp  colorlabel.h  denomspinbox.cpp  denomspinbox.h  fastlog.h  knob.cpp  knob.h  ltest.cpp  midipanknob.cpp  midipanknob.h  mslider.cpp  mslider.h  panknob.cpp  panknob.h  pitchedit.cpp  pitchedit.h  pitchlabel.cpp  pitchlabel.h  slider.cpp  slider.h  utils.cpp  utils.h  volknob.cpp  volknob.h  volslider.cpp  volslider.h
src/translations/: qtjmix_en.ts  qtjmix_fr.ts
